# posture-cam

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/camera/: CameraView.tsx  LandmarkOverlay.tsx
src/components/layout/: AppShell.tsx  Header.tsx
src/components/settings/: CalibrationButton.tsx  NotificationPrefs.tsx  ScoreThresholdSlider.tsx  SensitivitySelector.tsx
src/components/statistics/: PostureSummary.tsx  ScoreChart.tsx  SessionHistory.tsx
src/hooks/: useDatabase.ts  useNotification.tsx  usePoseDetection.ts  usePostureScore.ts  useSession.ts  useSettings.ts
src/lib/: constants.ts  db.ts
src/lib/posture/: analyzer.ts  calculations.ts  calibration.ts  confidence.ts  landmarks.ts  scoring.ts  smoother.ts  types.ts  visualization.ts
src/lib/posture/__tests__/: calculations.test.ts  calibration.test.ts  confidence.test.ts  scoring.test.ts  smoother.test.ts
src/styles/: globals.css
src/test/mocks/: landmarks.ts
src/types/: index.ts
