[package]
name = "posture-monitor"
version = "0.1.0"
description = "A privacy-first posture monitoring desktop app"
authors = ["Gustavo Steinmetz"]
edition = "2021"

[lib]
name = "posture_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"

